--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@next/font": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "18.2.0",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/simple-peer": "^9.11.5",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "autoprefixer": "^10.4.13",
@@ -36,7 +40,7 @@
     "stylelint": "^14.14.1",
     "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-standard": "^29.0.0",
-    "typescript": "4.9.4",
-    "tailwindcss": "^3.2.2"
+    "tailwindcss": "^3.2.2",
+    "typescript": "4.9.4"
   }
 }
