--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "nanoid": "3.3.4",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.10",
     "@types/simple-peer": "^9.11.5",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
